--- a/src/ui/widgets/widgets/StreamSettingsWidget.ui
+++ b/src/ui/widgets/widgets/StreamSettingsWidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>455</width>
-    <height>379</height>
+    <width>457</width>
+    <height>381</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -39,7 +39,7 @@
           </size>
          </property>
          <property name="currentIndex">
-          <number>0</number>
+          <number>6</number>
          </property>
          <widget class="QWidget" name="tcpStackPage">
           <layout class="QGridLayout" name="gridLayout_2" rowstretch="0,0,1,0">
@@ -628,7 +628,7 @@
            </item>
           </layout>
          </widget>
-         <widget class="QWidget" name="page">
+         <widget class="QWidget" name="grpcStackPage">
           <layout class="QFormLayout" name="formLayout_6">
            <item row="0" column="0">
             <widget class="QLabel" name="label_11">
@@ -639,6 +639,32 @@
            </item>
            <item row="0" column="1">
             <widget class="QLineEdit" name="grpcServiceNameTxt"/>
+           </item>
+           <item row="1" column="0">
+            <widget class="QLabel" name="modeLabel">
+             <property name="text">
+              <string>Mode</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QComboBox" name="grpcModeCB">
+             <item>
+              <property name="text">
+               <string>gun</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>multi</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>guna</string>
+              </property>
+             </item>
+            </widget>
            </item>
           </layout>
          </widget>
