Dev grpc vless support (#1475)
* feat: grpc mode

* fix: grpc mode inconsistent

* chore: clang-fmt

* chore: notrify grpc items & revert currentIndex changes & remove guna

--- a/src/ui/widgets/widgets/StreamSettingsWidget.ui
+++ b/src/ui/widgets/widgets/StreamSettingsWidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>455</width>
-    <height>379</height>
+    <width>459</width>
+    <height>383</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -628,7 +628,7 @@
            </item>
           </layout>
          </widget>
-         <widget class="QWidget" name="page">
+         <widget class="QWidget" name="grpcStackPage">
           <layout class="QFormLayout" name="formLayout_6">
            <item row="0" column="0">
             <widget class="QLabel" name="label_11">
@@ -639,6 +639,27 @@
            </item>
            <item row="0" column="1">
             <widget class="QLineEdit" name="grpcServiceNameTxt"/>
+           </item>
+           <item row="1" column="0">
+            <widget class="QLabel" name="modeLabel">
+             <property name="text">
+              <string>Mode</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QComboBox" name="grpcModeCB">
+             <item>
+              <property name="text">
+               <string notr="true">gun</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string notr="true">multi</string>
+              </property>
+             </item>
+            </widget>
            </item>
           </layout>
          </widget>
