--- a/src/ui/widgets/widgets/StreamSettingsWidget.ui
+++ b/src/ui/widgets/widgets/StreamSettingsWidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>459</width>
-    <height>383</height>
+    <width>465</width>
+    <height>402</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -771,6 +771,13 @@
          </property>
         </widget>
        </item>
+       <item row="3" column="0" colspan="2">
+        <widget class="QCheckBox" name="disableSystemRoot">
+         <property name="text">
+          <string>Disable System Root Certificates</string>
+         </property>
+        </widget>
+       </item>
        <item row="4" column="0">
         <widget class="QLabel" name="label_6">
          <property name="text">
@@ -791,10 +798,10 @@
        <item row="5" column="1">
         <widget class="QLineEdit" name="alpnTxt"/>
        </item>
-       <item row="3" column="0" colspan="2">
-        <widget class="QCheckBox" name="disableSystemRoot">
+       <item row="6" column="0">
+        <widget class="QLabel" name="label_9">
          <property name="text">
-          <string>Disable System Root Certificates</string>
+          <string>Certificates</string>
          </property>
         </widget>
        </item>
@@ -811,10 +818,10 @@
          </property>
         </widget>
        </item>
-       <item row="6" column="0">
-        <widget class="QLabel" name="label_9">
+       <item row="7" column="0" colspan="2">
+        <widget class="QPushButton" name="pinnedPeerCertificateChainSha256Btn">
          <property name="text">
-          <string>Certificates</string>
+          <string>Open pinnedPeerCertificateChainSha256 Editor</string>
          </property>
         </widget>
        </item>
