--- a/src/ui/widgets/widgets/StreamSettingsWidget.ui
+++ b/src/ui/widgets/widgets/StreamSettingsWidget.ui
@@ -954,6 +954,16 @@
          </item>
         </widget>
        </item>
+       <item row="3" column="0">
+        <widget class="QLabel" name="tcpKeepAliveIntervalLabel">
+         <property name="text">
+          <string>tcpKeepAliveInterval</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1">
+        <widget class="QSpinBox" name="tcpKeepAliveIntervalSpinBox"/>
+       </item>
       </layout>
      </widget>
     </widget>
