--- a/src/ui/widgets/widgets/StreamSettingsWidget.ui
+++ b/src/ui/widgets/widgets/StreamSettingsWidget.ui
@@ -975,7 +975,7 @@
        <item row="3" column="0">
         <widget class="QLabel" name="label_32">
          <property name="text">
-          <string>TCP Keep Alive Interval</string>
+          <string>TCP Keepalive Interval</string>
          </property>
         </widget>
        </item>
