--- a/src/ui/widgets/windows/w_PreferencesWindow.ui
+++ b/src/ui/widgets/windows/w_PreferencesWindow.ui
@@ -261,6 +261,24 @@
              </widget>
             </item>
             <item row="3" column="0">
+             <widget class="QLabel" name="label_94">
+              <property name="text">
+               <string>Click Close Button to Exit</string>
+              </property>
+             </widget>
+            </item>
+            <item row="3" column="1">
+             <widget class="QCheckBox" name="exitByCloseEventCB">
+              <property name="text">
+               <string>Enabled</string>
+              </property>
+              <property name="toolTip">
+               <string>Exit instead of minimizing to tray when the close button clicked.
+This option may be useful for some desktop environments without tray support.</string>
+              </property>
+             </widget>
+            </item>
+            <item row="4" column="0">
              <widget class="QLabel" name="label_19">
               <property name="text">
                <string>Auto Connect</string>
@@ -270,7 +288,7 @@
               </property>
              </widget>
             </item>
-            <item row="3" column="1">
+            <item row="4" column="1">
              <layout class="QFormLayout" name="formLayout_16">
               <item row="2" column="1">
                <widget class="QComboBox" name="autoStartConnCombo"/>
