--- a/src/ui/widgets/editors/w_RoutesEditor.ui
+++ b/src/ui/widgets/editors/w_RoutesEditor.ui
@@ -345,7 +345,7 @@
           <item row="1" column="0">
            <widget class="QLabel" name="label_2">
             <property name="text">
-             <string>:Listening Port</string>
+             <string>Listening Port</string>
             </property>
            </widget>
           </item>
