--- a/src/ui/widgets/editors/w_RoutesEditor.ui
+++ b/src/ui/widgets/editors/w_RoutesEditor.ui
@@ -251,13 +251,34 @@
          </widget>
         </item>
         <item row="1" column="0">
+         <widget class="QLabel" name="label_13">
+          <property name="text">
+           <string>Matcher</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QComboBox" name="domainMatcherCombo">
+          <item>
+           <property name="text">
+            <string>Original</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Minimal Perfect Hash Matcher</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+        <item row="2" column="0">
          <widget class="QLabel" name="label_9">
           <property name="text">
            <string>Default Outbound</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
+        <item row="2" column="1">
          <widget class="QComboBox" name="defaultOutboundCombo">
           <property name="sizePolicy">
            <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
